2005-02-14  Marek Safar  <marek.safar@seznam.cz>

	* expression.cs (New.DoResolve): Add complex core type reduction.
	(New.Constantify): Converts complex core type syntax like 'new int ()'
	to simple constant.
	
2005-02-14  Raja R Harinath  <rharinath@novell.com>

	* decl.cs (EntryType.EntryType): New constructor to create an
	updated copy of a cache entry.
	(MemberCache.AddMethods): Use it.
	(MemberCache.ClearDeclaredOnly): Remove.
	(MemberCache.MemberCache): Update.

2005-02-11  Miguel de Icaza  <miguel@novell.com>

	* codegen.cs (EmitContext): Introduce the `MethodIsStatic'
	variable.  This one is represents the actual low-level declaration
	of the method, as opposed to the semantic level `IsStatic'.   

	An anonymous method which is hosted into a static method might be
	actually an instance method.  IsStatic would reflect the
	container, while MethodIsStatic represents the actual code
	generated.

	* expression.cs (ParameterReference): Use the new MethodIsStatic
	instead of IsStatic.

	* anonymous.cs (AnonymousMethod.Compatible): Pass the
	Modifiers.STATIC to the Anonymous' Method EmitContext if static is
	set on the current EmitContext. 

	* expression.cs (Cast): Overload DoResolveLValue so we can pass
	resolve our casted expression as an LValue.  This triggers the
	proper LValue processing that is later required by Assign.

	This fixes 72347.

	* cs-tokenizer.cs (pp_and): recurse on pp_and, fixes #61903.

2005-02-11  Marek Safar  <marek.safar@seznam.cz>

	C# 2.0 Fixed buffer implementation

	* anonymous.cs: Update after RegisterHelperClass renaming.

	* attribute.cs (AttributeTester.fixed_buffer_cache):
	Cache of external fixed buffers.
	(AttributeTester.GetFixedBuffer): Returns IFixedBuffer
	implementation if field is fixed buffer else null.

	* class.cs
	(TypeContainer.AddField): Accept FieldMember instead of Field.
	(FieldBase.IsFieldClsCompliant): Extracted code from
	VerifyClsCompliance descendant customization.